@@ -1,37 +1,57 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.3'
-	id 'io.spring.dependency-management' version '1.1.4'
+	id 'application'
 }
 
 group = 'edu.hcmut'
 version = '0.0.1-SNAPSHOT'
 
-java {
-	sourceCompatibility = '17'
-}
 
 repositories {
 	mavenCentral()
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-
-	implementation 'org.springframework.data:spring-data-commons:3.2.3'
-
-	// Apache Ignite related packages
-//	implementation 'org.apache.ignite:ignite-spring-data-ext:2.0.0'
-//	implementation 'org.apache.ignite:ignite-core:2.16.0'
-//	implementation 'org.apache.ignite:ignite-indexing:2.16.0'
-//	implementation 'org.apache.ignite:ignite-spring:2.16.0'
-
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+application {
+	mainClass = "edu.hcmut.bookstore.BookstoreApplication"
+	applicationDefaultJvmArgs = [
+			"--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+			"--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+			"--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+			"--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+			"--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+			"--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
+			"--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+			"--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+			"--add-opens=java.base/java.io=ALL-UNNAMED",
+			"--add-opens=java.base/java.nio=ALL-UNNAMED",
+			"--add-opens=java.base/java.net=ALL-UNNAMED",
+			"--add-opens=java.base/java.util=ALL-UNNAMED",
+			"--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+			"--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
+			"--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+			"--add-opens=java.base/java.lang=ALL-UNNAMED",
+			"--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+			"--add-opens=java.base/java.math=ALL-UNNAMED",
+			"--add-opens=java.sql/java.sql=ALL-UNNAMED",
+			"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+			"--add-opens=java.base/java.time=ALL-UNNAMED",
+			"--add-opens=java.base/java.text=ALL-UNNAMED",
+			"--add-opens=java.management/sun.management=ALL-UNNAMED",
+			"--add-opens", "java.desktop/java.awt.font=ALL-UNNAMED"
+	]
 }
 
-tasks.named('test') {
+dependencies {
+	implementation "io.javalin:javalin:6.1.3"
+	implementation "org.slf4j:slf4j-simple:2.0.10"
+	implementation 'org.apache.ignite:ignite-core:2.16.0'
+	implementation 'com.mysql:mysql-connector-j:8.3.0'
+	implementation "com.fasterxml.jackson.core:jackson-databind:2.16.1"
+	testImplementation platform("org.junit:junit-bom:5.9.1")
+	testImplementation "org.junit.jupiter:junit-jupiter"
+	implementation 'com.h2database:h2:2.2.224'
+}
+
+tasks.test {
 	useJUnitPlatform()
 }
